Add Common.Logging depedency to NuGet package definition

--- a/nuget/Meerkat.Mailer.nuspec
+++ b/nuget/Meerkat.Mailer.nuspec
@@ -13,6 +13,7 @@
         <releaseNotes>@releaseNotes@</releaseNotes>
         <tags></tags>
         <dependencies>
+            <dependency id="Common.Logging.Core" version="3.3.1" />
         </dependencies>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
     </metadata>
