--- a/code/Meerkat.Mailer/Meerkat.Mailer.csproj
+++ b/code/Meerkat.Mailer/Meerkat.Mailer.csproj
@@ -10,8 +10,6 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Meerkat.Mailer</RootNamespace>
     <AssemblyName>Meerkat.Mailer</AssemblyName>
-    <SignAssembly>false</SignAssembly>
-    <AssemblyOriginatorKeyFile>..\Mailer.snk</AssemblyOriginatorKeyFile>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <OldToolsVersion>3.5</OldToolsVersion>
@@ -138,6 +136,9 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\..\Meerkat.Mailer.snk">
+      <Link>Meerkat.Mailer.snk</Link>
+    </None>
     <None Include="app.config" />
     <None Include="packages.config">
       <SubType>Designer</SubType>
