--- a/nuget/Meerkat.Mailer.nuspec
+++ b/nuget/Meerkat.Mailer.nuspec
@@ -13,7 +13,7 @@
         <releaseNotes>@releaseNotes@</releaseNotes>
         <tags></tags>
         <dependencies>
-            <dependency id="Common.Logging" version="3.3.1" />
+            <dependency id="Meerkat.Logging" version="1.0.2" />
         </dependencies>
         <requireLicenseAcceptance>false</requireLicenseAcceptance>
     </metadata>
