--- a/code/Meerkat.Mailer.Test/App.config
+++ b/code/Meerkat.Mailer.Test/App.config
@@ -28,5 +28,9 @@
                 <network host="localhost" port="15525"/>
             </smtp>
         </mailSettings>
-    </system.net>    
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
+    </system.net>
+    
+    <startup>
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
+    </startup>
+</configuration>
