Update tests to NUnit3 Change over to NUnit3 for test execution Acquire testing tools via paket

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 
 
 # Build results
+.vs/
 [Dd]ebug/
 [Dd]ebugPublic/
 [Rr]elease/
@@ -144,6 +145,12 @@ publish/
 *.[Pp]ublish.xml
 *.azurePubxml
 
+# Build tools/artifacts
+.fake/
+.paket/paket.exe
+paket.restore.targets
+packages/
+paket-files/
 
 # NuGet Packages Directory
 ## TODO: If you have NuGet Package Restore enabled, uncomment the next line
@@ -223,6 +230,3 @@ Desktop.ini
 
 # Recycle Bin used on file shares
 $RECYCLE.BIN/
-/.paket/paket.exe
-/.fake
-/packages/build
