--- a/code/Meerkat.Mailer.Test/packages.config
+++ b/code/Meerkat.Mailer.Test/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="4.2.1" targetFramework="net45" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net40" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net40" />
-  <package id="Moq" version="4.2.1510.2205" targetFramework="net40" />
+  <package id="Moq" version="4.8.0" targetFramework="net45" />
   <package id="NCheck" version="2.2.0" targetFramework="net40" />
   <package id="nDumbster" version="1.0.3.0" targetFramework="net40" />
-  <package id="NUnit" version="2.6.4" targetFramework="net40" />
+  <package id="NUnit" version="3.9.0" targetFramework="net45" />
+  <package id="System.Threading.Tasks.Extensions" version="4.4.0" targetFramework="net45" />
 </packages>
