--- a/code/Meerkat.Mailer.SendGrid/Meerkat.Mailer.SendGrid.csproj
+++ b/code/Meerkat.Mailer.SendGrid/Meerkat.Mailer.SendGrid.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net452</TargetFrameworks>
+    <TargetFrameworks>net452;net462;net471;net472;</TargetFrameworks>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <RootNamespace>Meerkat.Mailer.SendGrid</RootNamespace>
     <Description>SendGrid integration for Meerkat.Mailer</Description>
@@ -22,8 +22,8 @@
 	<DelaySign>false</DelaySign>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Meerkat.Logging" Version="2.0.0" />
-    <PackageReference Include="Microsoft.CSharp" Version="4.3.0" />
+    <PackageReference Include="Meerkat.Logging" Version="2.2.0" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
     <PackageReference Include="SendGrid" Version="9.9.0" />
     <PackageReference Include="SendGrid.SmtpApi" Version="1.3.3" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.4.1" Condition="'$(TargetFramework)' == 'netstandard2.0'" />
