--- a/code/Meerkat.Mailer/Meerkat.Mailer.csproj
+++ b/code/Meerkat.Mailer/Meerkat.Mailer.csproj
@@ -9,20 +9,21 @@
     <Title>Meerkat Mailer</Title>
     <Copyright>Copyright © 2016 Paul Hatcher</Copyright>
     <PackageLicenseUrl>http://opensource.org/licenses/mit-license.php</PackageLicenseUrl>
+    <PackageLicenceType>MIT</PackageLicenceType>
     <PackageProjectUrl>https://github.com/phatcher/Meerkat.Mailer</PackageProjectUrl>
     <PackageRequireLicenceAcceptance>False</PackageRequireLicenceAcceptance>
     <PackageTags>Email smtp msg template mailmerge</PackageTags>
     <RepositoryUrl>https://github.com/phatcher/Meerkat.Mailer</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-    <Authors>Paul Hatcher</Authors>
-	<OutputPath>$(SolutionDir)/build/$(Configuration)/$(AssemblyName)/$(TargetFramework)/</OutputPath>
-	<OutDir>$(OutputPath)</OutDir>
-	<SignAssembly>true</SignAssembly>
-	<AssemblyOriginatorKeyFile>..\..\Meerkat.Mailer.snk</AssemblyOriginatorKeyFile>
-	<DelaySign>false</DelaySign>
+    <RepositoryType>git</RepositoryType>    <Authors>Paul Hatcher</Authors>
+    <OutputPath>$(SolutionDir)/build/$(Configuration)/$(AssemblyName)/$(TargetFramework)/</OutputPath>
+    <OutDir>$(OutputPath)</OutDir>
+    <SignAssembly>true</SignAssembly>
+    <AssemblyOriginatorKeyFile>..\..\Meerkat.Mailer.snk</AssemblyOriginatorKeyFile>
+    <DelaySign>false</DelaySign>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Meerkat.Logging" Version="2.2.1" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-18618-05" PrivateAssets="All"/>
     <!--<PackageReference Include="Microsoft.CSharp" Version="4.5.0" Condition="'$(TargetFramework)' == 'netstandard2.0'" />-->
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" Condition="'$(TargetFramework)' == 'netstandard2.0'" />
   </ItemGroup>
@@ -44,6 +45,6 @@
     <None Include="..\..\Meekat.Mailer.snk" Link="Properties\Meekat.Mailer.snk" />
   </ItemGroup>
   <ItemGroup>
-      <Reference Include="System.Configuration" Condition="'$(TargetFramework)' != 'netstandard2.0'" />
+    <Reference Include="System.Configuration" Condition="'$(TargetFramework)' != 'netstandard2.0'" />
   </ItemGroup>
 </Project>
