--- a/code/Meerkat.Mailer.SendGrid/Meerkat.Mailer.SendGrid.csproj
+++ b/code/Meerkat.Mailer.SendGrid/Meerkat.Mailer.SendGrid.csproj
@@ -20,7 +20,15 @@
 	<SignAssembly>true</SignAssembly>
 	<AssemblyOriginatorKeyFile>..\..\Meerkat.Mailer.snk</AssemblyOriginatorKeyFile>
 	<DelaySign>false</DelaySign>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Meerkat.Logging" Version="2.2.1" />
     <PackageReference Include="Microsoft.CSharp" Version="4.5.0" />
